--- a/css/blocoDeNotas.css
+++ b/css/blocoDeNotas.css
@@ -40,3 +40,17 @@ main{
     background-color: rgb(255, 166, 0);
     transition: 0.3s;
 }
+
+@media only screen and (max-width: 600px){
+    #bloco-de-notas{
+        grid-template-columns: repeat(auto-fill, 150px);
+    }
+    .nota{
+        height: 150px;
+        font-size: 16px;
+    }
+    .add-nota{
+        height: 150px;
+        font-size: 16px;
+    }
+}
